@@ -358,6 +358,20 @@
            {count_min, 0.25}]}]},
     {internal,
         "/tests/http_req/",
+        cloudi_service_router,
+        [{destinations,
+          [{"any.xml/get",
+            [{mode, round_robin},
+             {service_names,
+              ["/tests/http_req/c.xml/get",
+               "/tests/http_req/java.xml/get",
+               "/tests/http_req/python.xml/get",
+               "/tests/http_req/python_c.xml/get",
+               "/tests/http_req/ruby.xml/get"]}]}]}],
+        immediate_closest,
+        5000, 5000, 5000, [api], undefined, 1, 5, 300, []},
+    {internal,
+        "/tests/http_req/",
         cloudi_service_filesystem,
         [{directory, "tests/http_req/public_html/"},
          {refresh, 5} % seconds
